--- a/app/views/microposts/_microposts.html.erb
+++ b/app/views/microposts/_microposts.html.erb
@@ -15,6 +15,9 @@
                     <%= link_to "Delete", micropost, method: :delete, data: { confirm: "You sure?" }, class: 'btn btn-danger btn-sm' %>
                   <% end %>
               </div>
+              <div style="margin-top:5px;">
+                <%= render 'favorites/favorites_button', micropost: micropost %>
+              </div>
           </div>
       </li>
     <% end %>
